<resources>
    <string name="app_name">打印</string>
    <string name="to_qcode">生成二维码</string>
    <string name="input_text">请输入文字...</string>
    <string name="wangge">表格</string>
    <string name="dy_photo">图片</string>
    <string name="dy_ajust">调整</string>
    <string name="dy_biaoqing">表情包</string>
    <string name="dy_erweima">二维码</string>
    <string name="dy_row">行数</string>
    <string name="dy_coum">列数</string>
    <string name="dy_true">固定</string>
    <string name="dy_phototxt">图文</string>
    <string name="dy_eraser">涂鸦</string>
    <string name="dy_tukuang">图框</string>
    <string name="dy_xiaoji">小记</string>
    <string name="dy_yuledayin">娱乐打印</string>
    <string name="dy_daoru">导入</string>
    <string name="dy_ziti">字体</string>
    <string name="dy_chunwenben">纯文本</string>
    <string name="dy_shijian">时间</string>
    <string name="dy_myinfo">个人中心</string>
    <string name="dy_app_name">嘟嘟机</string>
    <string name="dy_qq">QQ群: 850810714</string>
    <string name="dy_yuyan">语言设置</string>
    <string name="dy_caozuo">操作指南</string>
    <string name="dy_shebei">设备列表</string>
    <string name="dy_list_footer_tip">别拉了,我是有底线的</string>
    <string name="dy_muban">模板</string>
    <string name="dy_year">年</string>
    <string name="dy_month">月</string>
    <string name="dy_day">日</string>
    <string name="dy_update">更新中...</string>
    <string name="dy_cannel">取消</string>
    <string name="dy_xuanzhuan">旋转</string>
    <string name="dy_man">男</string>
    <string name="dy_woman">女</string>
    <string name="dy_all_photo">所有照片</string>
    <string name="dy_here_add_txt">这里添加文字</string>
    <string name="dy_tuwen">图文打印</string>
    <string name="dy_to_max">达到最大限制</string>
    <string name="dy_wendang">文档打印</string>
    <string name="dy_daiban">待办清单打印</string>
    <string name="dy__to">生成</string>
    <string name="dy_hengfu">横幅打印</string>
    <string name="dy_size">大小</string>
    <string name="dy_cuxi">粗细</string>
    <string name="dy_move">移动和缩放</string>
    <string name="dy_zhitiao">纸条打印</string>
    <string name="dy_xiaozidayin">小字打印</string>
    <string name="dy_wenzi">文字</string>
    <string name="dy_zhitiaos">纸条</string>
    <string name="dy_hengfus">横幅</string>
    <string name="dy_daibanshixiang">待办事项</string>
    <string name="dy_word">word文档</string>
    <string name="dy_biaoqian">标签</string>
    <string name="dy_blue_error">配对不成功</string>
    <string name="dy_work">轻松工作</string>
    <string name="dy_tips">提示</string>
    <string name="dy_user_photo">头像</string>
    <string name="dy_nick">昵称</string>
    <string name="dy_sex">性别</string>
    <string name="dy_save">保存</string>
    <string name="dy_print_all">打印全部</string>
    <string name="connect_printer">请连接打印机</string>
    <string name="dy_yuyans">语言选择</string>
    <string name="common_title">首页</string>
    <string name="dy_choose_photo">选择图片</string>
    <string name="dy_choose_video">选择视频</string>
    <string name="dy_chinese">中文</string>
    <string name="dy_piaojudayin">票据打印</string>
    <string name="dy_yulegongzuo">娱乐工作</string>
    <string name="dy_wangye">网页打印</string>
    <string name="dy_english">English</string>
    <string name="dy_add_device">添加设备</string>
    <string name="dy_history">历史记录</string>
    <string name="dy_myinfos">个人资料</string>
    <string name="dy_setnick">设置昵称</string>
    <string name="dy_xiaopiao">小票</string>
    <string name="dy_buganjiao">不干胶</string>
    <string name="dy_tiaoxingma">条形码</string>
    <string name="dy_put_web">请输入网址</string>
    <string name="dy_goweb">前往</string>
    <string name="dy_zoom_b">放大</string>
    <string name="dy_zoom_s">缩小</string>
    <string name="dy_print_cur">打印当前</string>
    <string name="dy_xiaopiaodayin">小票打印</string>
    <string name="dy_biaoqiandayin">标签打印</string>
    <string name="dy_buganjiaodayin">不干胶打印</string>
    <string name="dy_toqcode">二维码打印</string>
    <string name="to_tiaoxingma">生成条形码</string>
    <string name="dy_tiaoxingmadayin">条形码打印</string>
    <string name="dy_photodayin">图片打印</string>
    <string name="dy_baioqingdayin">表情包打印</string>
    <string name="dy_sucai">素材库</string>
    <string name="dy_tuyadayin">涂鸦打印</string>
    <string name="dy_tukuangdayin">图框打印</string>
    <string name="dy_xiaojidayin">小记打印</string>
    <string name="dy_jilu">记录美好的一天...</string>
    <string name="dy_put_nick">请输入昵称</string>
    <string name="dy_take_photo">拍照</string>
    <string name="dy_from_local">从相册选取</string>
    <string name="dy_put">输入文字</string>
    <string name="dy_add">添加</string>
    <string name="dy_caijian">裁剪</string>
    <string name="dy_delete">删除</string>
    <string name="dy_chexiao">撤销</string>
    <string name="dy_chicun">请选择打印尺寸</string>

    <string name="dy_liangdu">特效</string>
    <string name="dy_sediao">色调</string>
    <string name="dy_baohedu">饱和度</string>
</resources>
