<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <include layout="@layout/common_title"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EFEFEF">


        <EditText
            android:id="@+id/edit_txt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_400"
            android:gravity="top"
            android:hint="@string/input_text"
            android:textColor="#929292"
            android:layout_marginTop="@dimen/dp_30"
            android:layout_marginLeft="@dimen/dp_50"
            android:layout_marginRight="@dimen/dp_50"
            android:visibility="visible"
            android:padding="@dimen/dp_20"
            android:background="@drawable/shape_pop_dialog"/>


        <Button
            android:id="@+id/get_txt"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_120"
            android:text="@string/dy__to"
            android:layout_below="@+id/edit_txt"
            android:layout_alignParentRight="true"
            android:layout_marginTop="-48dp"
            android:textColor="#fff"
            android:textSize="@dimen/sp_40"
            android:layout_marginRight="@dimen/dp_60"
            android:background="@drawable/shape_button_selector"/>

        <com.xiaopo.flying.sticker.StickerView
            android:id="@+id/canv"
            android:layout_marginTop="@dimen/dp_30"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/edit_txt"
            android:background="@drawable/shape_pop_dialog"
            android:layout_marginLeft="@dimen/dp_50"
            android:layout_marginRight="@dimen/dp_50"
            android:layout_marginBottom="@dimen/dp_20"
            android:layout_above="@+id/main_tab"
            android:layout_weight="1"
            app:showBorder="true"
            app:showIcons="true"
            >

        </com.xiaopo.flying.sticker.StickerView>


        <RadioGroup
            android:id="@+id/main_tab"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_150"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/dp_10"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/main_tab1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:button="@null"
                android:text="@string/dy_xuanzhuan"
                android:gravity="center"
                android:textSize="@dimen/sp_30"
                android:textColor="@color/text_color_selecter"
                android:drawableTop="@drawable/tab_xuanzhuan"
                android:background="@color/transparent"
                android:layout_weight="1"/>
            <RadioButton
                android:id="@+id/main_tab2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:button="@null"
                android:text="@string/dy_ziti"
                android:textColor="@color/text_color_selecter"
                android:textSize="@dimen/sp_30"
                android:gravity="center"
                android:background="@color/transparent"
                android:drawableTop="@drawable/tab_ziti"
                android:layout_weight="1"/>
            <RadioButton
                android:id="@+id/main_tab3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:button="@null"
                android:textSize="@dimen/sp_30"
                android:textColor="@color/text_color_selecter"
                android:text="@string/dy_photo"
                android:gravity="center"
                android:background="@color/transparent"
                android:drawableTop="@drawable/tab_tupian"
                android:layout_weight="1"/>
            <RadioButton
                android:id="@+id/main_tab4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:button="@null"
                android:textColor="@color/text_color_selecter"
                android:text="@string/dy_biaoqing"
                android:textSize="@dimen/sp_30"
                android:gravity="center"
                android:background="@color/transparent"
                android:drawableTop="@drawable/tab_biaoqing"
                android:layout_weight="1"/>
            <RadioButton
                android:id="@+id/main_tab5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:button="@null"
                android:textSize="@dimen/sp_30"
                android:textColor="@color/text_color_selecter"
                android:text="@string/dy_erweima"
                android:gravity="center"
                android:background="@color/transparent"
                android:drawableTop="@drawable/tab_ercode"
                android:layout_weight="1"/>
        </RadioGroup>
    </RelativeLayout>

</LinearLayout>