<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <include layout="@layout/common_title"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EFEFEF">




        <RelativeLayout
            android:id="@+id/canv"
            android:layout_marginTop="@dimen/dp_30"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/title_bar"
            android:background="@drawable/shape_pop_dialog"
            android:layout_marginLeft="@dimen/dp_50"
            android:layout_marginRight="@dimen/dp_50"
            android:layout_marginBottom="@dimen/dp_20"
            android:layout_above="@+id/main_tab">
            <ImageView
                android:id="@+id/canv_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />
            <LinearLayout
                android:id="@+id/edit_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            </LinearLayout>
            <EditText
                android:id="@+id/edit_txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top"
                android:hint="@string/input_text"
                android:textColor="#929292"
                android:cursorVisible="false"
                android:padding="@dimen/dp_30"
                android:visibility="gone"
                android:background="@null"/>


        </RelativeLayout>

        <RadioGroup
            android:id="@+id/main_tab"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_150"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/dp_10"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/main_tab1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:button="@null"
                android:text="@string/dy_sucai"
                android:gravity="center"
                android:textSize="@dimen/sp_30"
                android:textColor="@color/text_color_selecter"
                android:drawableTop="@drawable/tab_sucai"
                android:background="@color/transparent"
                android:layout_weight="1"/>
            <RadioButton
                android:id="@+id/main_tab2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:button="@null"
                android:text="@string/dy_photo"
                android:textColor="@color/text_color_selecter"
                android:textSize="@dimen/sp_30"
                android:gravity="center"
                android:background="@color/transparent"
                android:drawableTop="@drawable/tab_tupian"
                android:layout_weight="1"/>
            <RadioButton
                android:id="@+id/main_tab3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:button="@null"
                android:text="@string/dy_wenzi"
                android:textColor="@color/text_color_selecter"
                android:textSize="@dimen/sp_30"
                android:gravity="center"
                android:background="@color/transparent"
                android:drawableTop="@drawable/tab_ziti"
                android:layout_weight="1"/>
            <RadioButton
                android:id="@+id/main_tab4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:button="@null"
                android:text="@string/dy_biaoqing"
                android:textColor="@color/text_color_selecter"
                android:textSize="@dimen/sp_30"
                android:gravity="center"
                android:background="@color/transparent"
                android:drawableTop="@drawable/tab_biaoqing"
                android:layout_weight="1"/>

        </RadioGroup>


        <LinearLayout
            android:id="@+id/wangge_lay"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_180"
            android:layout_above="@+id/main_tab"
            android:layout_marginLeft="@dimen/dp_60"
            android:layout_marginRight="@dimen/dp_60"
            android:layout_marginBottom="@dimen/dp_20"
            android:paddingLeft="@dimen/dp_60"
            android:paddingRight="@dimen/dp_60"
            android:gravity="center"
            android:background="#fff"
            android:visibility="invisible"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:paddingLeft="@dimen/dp_20"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/min_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_weight="1"
                        android:text="1"/>

                    <SeekBar
                        android:id="@+id/size_seek"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toLeftOf="@+id/max_txt"
                        android:layout_toRightOf="@+id/min_txt"
                        android:layout_centerVertical="true"
                        android:progress="50"
                        android:max="100"
                        android:thumb="@drawable/pain_u"
                        android:layout_marginRight="@dimen/dp_60"
                        android:layout_marginLeft="@dimen/dp_60"/>

                    <TextView
                        android:id="@+id/max_txt"
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_height="wrap_content"
                        android:text="15"/>

                </RelativeLayout>

            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>