<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDEDED"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/person_info"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_500"
                android:background="@drawable/main_backimg">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dy_myinfo"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/dp_50"
                    android:textSize="@dimen/dp_60"
                    android:textColor="#fff"/>


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/my_shezhi"
                    android:layout_marginLeft="@dimen/dp_100"
                    android:layout_marginTop="@dimen/dp_250"
                    android:layout_width="@dimen/dp_180"
                    android:layout_height="@dimen/dp_180"
                    android:src="@drawable/my_logo" />

                <TextView
                    android:id="@+id/nick_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_50"
                    android:layout_marginTop="@dimen/dp_300"
                    android:layout_toRightOf="@+id/my_shezhi"
                    android:text="@string/app_name"
                    android:textColor="#fff"
                    android:textSize="@dimen/dp_60" />

                <ImageView
                    android:layout_marginLeft="@dimen/dp_100"
                    android:layout_marginTop="@dimen/dp_320"
                    android:layout_width="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/dp_50"
                    android:layout_height="wrap_content"
                    android:src="@drawable/goto1" />

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/item1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_130"
                android:background="#fff"
                android:layout_marginTop="@dimen/dp_10"
                android:paddingLeft="@dimen/dp_50"
                android:paddingRight="@dimen/dp_50"
                android:visibility="gone"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="@dimen/dp_75"
                    android:layout_height="@dimen/dp_75"
                    android:background="@drawable/qq"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:gravity="center_vertical"
                    android:text="@string/dy_qq"
                    android:layout_marginLeft="@dimen/dp_110"
                    android:textColor="#f333"
                    android:textSize="@dimen/sp_40" />
            </RelativeLayout>


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_10" />

            <RelativeLayout
                android:id="@+id/item2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_130"
                android:background="#fff"
                android:paddingLeft="@dimen/dp_50"
                android:paddingRight="@dimen/dp_50">

                <ImageView
                    android:layout_width="@dimen/dp_75"
                    android:layout_height="@dimen/dp_75"
                    android:layout_centerVertical="true"
                    android:background="@drawable/langulage"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:gravity="center_vertical"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_110"
                    android:text="@string/dy_yuyan"
                    android:textColor="#f333"
                    android:textSize="@dimen/sp_40" />
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_2"
                    android:background="#EDEDED"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="@dimen/dp_115"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/goto2"/>

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/item3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_130"
                android:background="#fff"
                android:paddingLeft="@dimen/dp_50"
                android:paddingRight="@dimen/dp_50">

                <ImageView
                    android:layout_width="@dimen/dp_75"
                    android:layout_height="@dimen/dp_75"
                    android:layout_centerVertical="true"
                    android:background="@drawable/pre_icon"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:gravity="center_vertical"
                    android:text="@string/dy_caozuo"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_110"
                    android:textColor="#f333"
                    android:textSize="@dimen/sp_40" />
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_2"
                    android:background="#EDEDED"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="@dimen/dp_115"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/goto2"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/item4"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_130"
                android:background="#fff"
                android:paddingLeft="@dimen/dp_50"
                android:paddingRight="@dimen/dp_50">

                <ImageView
                    android:layout_width="@dimen/dp_75"
                    android:layout_height="@dimen/dp_75"
                    android:layout_centerVertical="true"
                    android:background="@drawable/device_icon"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:gravity="center_vertical"
                    android:text="@string/dy_shebei"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_110"
                    android:textColor="#f333"
                    android:textSize="@dimen/sp_40" />
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_2"
                    android:background="#EDEDED"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="@dimen/dp_115"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/goto2"/>
            </RelativeLayout>




        </LinearLayout>
    </ScrollView>
</LinearLayout>